# shuriken-api-types-rs

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: alpha.rs  analytics.rs  automation.rs  error.rs  evm.rs  lib.rs  network.rs  notification.rs  platform.rs  signal.rs  svm.rs  wallet.rs
